[package]
name = "grrs"
version = "0.1.0"
authors = ["Oren Leiman <oren.leiman@protonmail.com>"]
license = "Apache-2.0"
description = "A tool to search files (CLI in Rust book)"
readme = "README.md"
homepage = "https://github.com/oleiman/grrs"
respository = "https://github.com/oleiman/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.1"
log = "0.4.17"
env_logger = "0.9.1"
clap-verbosity-flag = "2.0.0"
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"